UtahLiveDataTest/src/objects/Case__c.object
<CustomObject>
    <description>Business - Use to create case.</description>
    <fields>
        <fullName>CaseCommentsAll__c</fullName>
        <description>This is field which will append case comments into a single field</description>
        <label>Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseComments__c</fullName>
        <label>Case Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <displayFormat>CS-{0000}</displayFormat>
        <label>CaseNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CaseOwnerText__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName + Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseOwnerText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetailedComments__c</fullName>
        <description>Comments for resolution of issue. These are visible to the Issue creator</description>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HideAnalysisField__c</fullName>
        <formula>NOT( ISPICKVAL( Status__c , &apos;New&apos;)  || ISPICKVAL( Status__c , &apos;In Progress&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Analysis field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideTier1Analysis__c</fullName>
        <formula>NOT(  ISPICKVAL( Status__c , &apos;In Progress&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Tier 1 Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideTier2Analysis__c</fullName>
        <formula>NOT(  ISPICKVAL( Status__c , &apos;Tier2 Support&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Tier2 Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>User Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Deactivate</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <externalId>true</externalId>
        <label>InternalUniqueID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoggedInUserOwner__c</fullName>
        <formula>IF($User.Id =  OwnerId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is LoggedIn User Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubStatusClosed__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Status Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTier2LoggedIn__c</fullName>
        <formula>IF($User.ProfileName__c = &apos;TR2&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Tier2 LoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Funding Opportunity</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Monitoring</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboard</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>User Management</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <description>Store object type of record Id. Populated from trigger.</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>Owner:User.Username +  Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <description>Store record id of related object.</description>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedByName__c</fullName>
        <formula>ReportedBy__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportedBy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1(Blocker)</fullName>
                </value>
                <value>
                    <fullName>2(High)</fullName>
                </value>
                <value>
                    <fullName>3(Major)</fullName>
                </value>
                <value>
                    <fullName>4(Minor)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Tier1 Support</fullName>
                </value>
                <value>
                    <fullName>Tier2 Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier1Analysis__c</fullName>
        <description>Detailed analysis from Helpdesk Tier 1 Team</description>
        <label>Tier1 Analysis</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier2Analysis__c</fullName>
        <description>Initial Tier 2 Analysis for the issue assigned to Tier 2</description>
        <label>Tier2 Analysis</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalSpentDays__c</fullName>
        <formula>TODAY() -  DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isOwnerQueue__c</fullName>
        <formula>If(BEGINS(OwnerId,&quot;00G&quot;),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwnerQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTier1LoggedIn__c</fullName>
        <formula>IF($User.ProfileName__c = &apos;TR1&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Tier1 LoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <label>GG Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GovGrants_Helpdesk_Tier1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>GovGrants_Helpdesk_Tier1</label>
        <queue>GovGrants_Helpdesk_Tier1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GovGrants_Helpdesk_Tier2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>GovGrants_Helpdesk_Tier2</label>
        <queue>GovGrants_Helpdesk_Tier2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>